crates/ddlog-syntax/tests/validation/fail/missing_attribute_commas.dl
// kind:item validate:true pass:false ignore:false
#[foo = bar bar = baz]
function foo() {}
#[foo = bar bar = baz]
relation Foo()
